--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,6 +81,11 @@
               >Containers Allotment</a
             >
           </li>
+          <li>
+            <a [routerLink]="['/product']" [routerLinkActive]="['active']"
+              >Products</a
+            >
+          </li>
         </ul>
       </div>
     </div>
