--- a/src/styles.scss
+++ b/src/styles.scss
@@ -153,7 +153,7 @@ header,
   }
 }
 
-.table .btn-link-download {
+.btn-link-icon {
   color: var(--bs-table-color);
   background: transparent;
   border: none;
