--- a/src/app/donation/donation.component.html
+++ b/src/app/donation/donation.component.html
@@ -27,6 +27,8 @@
             <td>
               @switch(donation.status) { @case (DonationStatus.Donated) {
               <span class="badge badge-primary">Dontated</span>
+              } @case (DonationStatus.Received) {
+              <span class="badge badge-secondary">Received</span>
               } @case (DonationStatus.Processed) {
               <span class="badge badge-success">Processed</span>
               } @case (DonationStatus.Paid) {
