Added User & Preferences Feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,6 +79,11 @@
               >Products</a
             >
           </li>
+          <li>
+            <a [routerLink]="['/user']" [routerLinkActive]="['active']"
+              >Users</a
+            >
+          </li>
         </ul>
       </div>
     </div>
