--- a/src/app/container-allotment/approve-container-request/approve-container-request.component.html
+++ b/src/app/container-allotment/approve-container-request/approve-container-request.component.html
@@ -46,7 +46,7 @@
         <input
           class="form-control"
           disabled
-          [value]="donationContainer?.clinic?.clinicCode"
+          [value]="donationContainer?.clinic?.clinicName"
         />
       </div>
     </div>
