--- a/src/app/user/add-user/add-user.component.html
+++ b/src/app/user/add-user/add-user.component.html
@@ -12,10 +12,10 @@
   <div class="modal-body">
     <div class="row mb-3">
       <div class="col-md-4">
-        <label>Email</label>
-        <input type="text" class="form-control" formControlName="email" />
+        <label>Username</label>
+        <input type="text" class="form-control" formControlName="username" />
         <app-validation-message
-          fieldName="email"
+          fieldName="username"
           [formGroup]="userForm"
           [ngFormTemplate]="form"
         ></app-validation-message>
