--- a/src/app/user/edit-user/edit-user.component.html
+++ b/src/app/user/edit-user/edit-user.component.html
@@ -52,11 +52,15 @@
       <form [formGroup]="userForm" (ngSubmit)="submitForm()" #form="ngForm">
         <div class="row mb-3">
           <div class="col-md-6">
-            <label>Email</label>
-            <input type="text" class="form-control" formControlName="email" />
+            <label>Username</label>
+            <input
+              type="text"
+              class="form-control"
+              formControlName="username"
+            />
 
             <app-validation-message
-              fieldName="email"
+              fieldName="username"
               [formGroup]="userForm"
               [ngFormTemplate]="form"
             ></app-validation-message>
