--- a/src/app/container-allotment/container-request-detail/container-request-detail.component.html
+++ b/src/app/container-allotment/container-request-detail/container-request-detail.component.html
@@ -36,7 +36,7 @@
       <input
         class="form-control"
         disabled
-        [value]="donationContainer?.clinic?.clinicCode"
+        [value]="donationContainer?.clinic?.clinicName"
       />
     </div>
   </div>
