--- a/src/app/donation/edit-donation/edit-donation.component.html
+++ b/src/app/donation/edit-donation/edit-donation.component.html
@@ -17,7 +17,7 @@
         <label for="clinicId" class="form-label"> Clinic</label>
         <input
           class="form-control"
-          [value]="donation?.clinic?.clinicCode"
+          [value]="donation?.clinic?.clinicName"
           disabled
         />
       </div>
