Buyer Portal Changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,6 +84,9 @@
               >Users</a
             >
           </li>
+          <li>
+            <a [routerLink]="['/order']" routerLinkActive="active">Orders</a>
+          </li>
         </ul>
       </div>
     </div>
