Changed clinic label text to Location

--- a/src/app/container-allotment/approve-container-request/approve-container-request.component.html
+++ b/src/app/container-allotment/approve-container-request/approve-container-request.component.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="col-md-4">
-        <label for="donor" class="form-label"> Clinic </label>
+        <label for="donor" class="form-label"> Location </label>
         <input
           class="form-control"
           disabled
