--- a/src/app/order/order-detail/order-detail.component.html
+++ b/src/app/order/order-detail/order-detail.component.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="col-md-6">
-      <label>Clinic</label>
+      <label>Location</label>
       <input
         type="text"
         class="form-control"
